feat: complete port of Artur Sepp's Option Pricing Library.
Added Models:
- Normal (Bachelier) Model:
  - Implemented correct pricing for calls and puts
  - Added Greeks calculations (Delta, Gamma, Vega, Theta)
  - Fixed vola scaling to properly convert between relative and absolute volatility per model specification
- Stoch Vol Base Class:
  - Created ABC class for stochastic vol models
  - Use P-C Parity for pricing where one price is known, under the no-arb assumption.
- Log Normal Stoch Vol Model
  - Characteristic function following Sepp's approach
  - Added Monte Carlo simulation
  - fix: fixed a small paths issue here in the cmake file
- Implemented Heston Stochastic Vola Model

Fixes:
- Several numerical issues in all models
- Added an example: advanced_models.cpp demonstrating usage of all models.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,11 @@ endif()
 add_library(vanilla_options
         src/models/black_scholes.cpp
         src/pricers/black_scholes_pricer.cpp
+        src/models/normal.cpp
+        src/pricers/normal_pricer.cpp
+        src/models/stochastic_vol_model.cpp
+        src/models/log_normal_sv.cpp
+        src/models/heston_sv.cpp
 )
 
 target_include_directories(vanilla_options
